--- a/CINESTOP/html/movies/bollywood/chennai_express.html
+++ b/CINESTOP/html/movies/bollywood/chennai_express.html
@@ -105,42 +105,50 @@
     <br><br><br>
 
     <div>
-        <h1 class="contact-heading">WAR (2019)</h1>
+        <h1 class="contact-heading">CHENNAI EXPRESS (2013)</h1>
     </div>
 
 
     <div class="movie-main">
         <div class="movie-left">
             <h2 class="contact-left-heading">About The <span> Movie </span></h2>
-            <p class="contact-left-para" style="color: lightgray;">War is a 2019 Indian Hindi-language action thriller
-                film directed by Siddharth Anand and produced by Aditya Chopra under Yash Raj Films. The third
-                installment in the YRF Spy Universe, it stars Hrithik Roshan and Tiger Shroff in the lead roles, with
-                Vaani Kapoor and Ashutosh Rana. In the film, an Indian RAW agent is assigned to eliminate his former
-                mentor who has gone rogue. <br>
+            <p class="contact-left-para" style="color: lightgray;">
+                Chennai Express is a 2013 Indian action comedy film[9][10] directed by Rohit Shetty and produced by UTV
+                Motion Pictures and Red Chillies Entertainment. The film stars Shah Rukh Khan and Deepika Padukone with
+                Nikitin Dheer and Sathyaraj in supporting roles. It revolves around Rahul Mithaiwala, a businessman who
+                accidentally boards the eponymous train and journeys from Mumbai to Rameswaram with the daughter of an
+                influential crime boss. The film, primarily in Hindi, contains significant Tamil dialogue due to its
+                setting in Rameswaram. <br>
 
-                Principal photography commenced in September 2018. Tentatively titled Fighters, the title of War was
-                announced on 15 July 2019. The film was made on an estimated budget of ₹150 crore (US$18 million) with a
-                further ₹20 crore (US$2.4 million) spent on print and advertising. Vishal–Shekhar composed the
-                soundtrack, with the background score composed by Sanchit Balhara and Ankit Balhara, replacing Anand's
-                frequent collaborators Salim–Sulaiman. <br>
+                The first planned collaboration between Khan and Shetty was a remake of Angoor (1982). The script of
+                Chennai Express, which was initially written as a backup project for Khan, was chosen instead. Conceived
+                as a "commercial romance", the film was originally titled Ready Steady Po. Filming began in Mehboob
+                Studio in October 2012 and was completed by May 2013. A large part of the film was set in Ooty, for
+                which sets were constructed in Wai and also in Ramoji Film City. The soundtrack for Chennai Express was
+                composed by Vishal–Shekhar, with the background score being composed by Amar Mohile. UTV Motion Pictures
+                came on board as producer and distributor, marking its first active project with Khan after Swades
+                (2004). <br>
 
-                War was theatrically released on 2 October 2019, with dubbed versions of Telugu and Tamil, coinciding
-                with Gandhi Jayanti.[5] It received generally positive reviews from critics, with praise towards its
-                action sequences, visuals, direction, cinematography, story, soundtrack, and cast performances, but
-                criticism towards its screenplay.[6] It emerged as a commercial success grossing ₹4.75 billion (US$67.45
-                million), becoming the highest-grossing Indian film of 2019.[7] A sequel titled War 2 was released in
-                2025.</p>
+                Chennai Express was released theatrically in international markets on 8 August 2013 and a day later in
+                India. The film received mixed reviews from critics and it broke several box office records in India and
+                abroad, becoming the quickest film to collect ₹1 billion (US$17.07 million) net domestically. The film
+                surpassed 3 Idiots (2009) to become the highest-grossing Hindi film worldwide at that point. The film
+                become second highest grossing Indian film in 2013. Chennai Express has stayed among the top 50
+                highest-grossing Indian films for over a decade, from its 2013 release to 2024. With a worldwide gross
+                of ₹395.92–424.54 crore, the film's blend of romance, comedy, and action has resonated with audiences
+                worldwide, securing its place as one of the most beloved and commercially successful films in Indian
+                cinema.</p>
 
             <h2 class="contact-left-heading"> Movie <span> Awards </span></h2>
             <ul style="list-style-type: square;">
-                <li style="color: lightgray;">Filmfare Award for Best Action 2020</li>
-                <li style="color: lightgray;">IIFA Award for Best Choreography 2021</li>
-                <li style="color: lightgray;">Mirchi Music Awards</li>
-                <li style="color: lightgray;">Zee Cine Awards </li>
-                <li style="color: lightgray;">Screen Awards </li>
+                <li style="color: lightgray;">IIFA Award for Best Sound Design</li>
+                <li style="color: lightgray;">IIFA Award for Best Special Effects (Visuals)</li>
+                <li style="color: lightgray;">Filmfare Award for Sony Trendsetter of the Year</li>
+                <li style="color: lightgray;">Zee Cine Award for Best Marketed Film of the Year</li>
+                <li style="color: lightgray;">Stardust Award for Best Film of the Year </li>
             </ul>
             <br>
-           
+
 
 
         </div>
@@ -151,23 +159,23 @@
                 <button id="submit"> <a href="" style="text-decoration: none; color: white;">▶ WATCH NOW </a></button>
                 <div style="margin-left: -20px; margin-top: 27px;">
                     <ul style="list-style-type: none;">
-                        <li> <span style="font-weight: bold;">Genre:</span> Action</li>
-                        <li> <span style="font-weight: bold;"> Release Date: </span> 2 Oct 2019</li>
-                        <li> <span style="font-weight: bold;">Directed By: </span> Yash Raj Films</li>
+                        <li> <span style="font-weight: bold;">Genre:</span> Romance, Comedy</li>
+                        <li> <span style="font-weight: bold;"> Release Date: </span> 09 Aug 2013</li>
+                        <li> <span style="font-weight: bold;">Directed By: </span> Rohit Shetty</li>
                         <li> <span style="font-weight: bold;">Ratings: </span></li>
                         <ul style="list-style-type: square;">
-                            <li >IMDb Rating:  6.6/10
+                            <li>IMDb Rating: 6.1/10
                             </li>
-                            <li >Rotten Tomatoes:  67%
+                            <li>Rotten Tomatoes: 53%
                             </li>
                         </ul>
                         <li> <span style="font-weight: bold;">Cast: </span></li>
                         <ul style="list-style-type: square;">
-                            <li> Hrithik Roshan as Kabir</li>
-                            <li>Tiger Shroff as Khalid</li>
-                            <li>Vaani Kapoor as Naina</li>
-                            <li>Ashutosh Ranaas as Colonel Luthra </li>
-                            <li>Anupriya Goenka as Aditi </li>
+                            <li>Shah Rukh Khan as Rahul Mithaiwala</li>
+                            <li>Deepika Padukone as Meenalochni</li>
+                            <li>Nikitin Dheer as Tangaballi</li>
+                            <li>Sathyaraj as Durgeshwara</li>
+                            <li>Kamini Kaushal as Neetu Mithaiwala </li>
                         </ul>
 
                     </ul>
@@ -179,12 +187,13 @@
     </div>
 
     <div>
-        <h1 style=" padding: 13px; margin-left: 20px; margin-top: -20px;" class="contact-left-heading"> MORE <span> BOLLYWOOD </span></h1>
+        <h1 style=" padding: 13px; margin-left: 20px; margin-top: -20px;" class="contact-left-heading"> MORE <span>
+                BOLLYWOOD </span></h1>
     </div>
 
     <div style="display: inline; margin-left: 5.5vw; margin-top: 8px;">
         <div class="movie-card-holder">
-            <a href="#"><img
+            <a href="../bollywood/war.html"><img
                     src="https://i.pinimg.com/736x/7e/4a/69/7e4a690244c526b6b922a613e1859a14.jpg" alt="Image 4"></a>
             <h3>WAR
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -192,16 +201,16 @@
         </div>
 
         <div class="movie-card-holder">
-            <a href="../bollywood/dangal.html"> <img src="https://i.pinimg.com/736x/7b/fc/85/7bfc85e7a11d62a90aa58cd395529622.jpg"
-                    alt="Image 2"></a>
+            <a href="../bollywood/dangal.html"> <img
+                    src="https://i.pinimg.com/736x/7b/fc/85/7bfc85e7a11d62a90aa58cd395529622.jpg" alt="Image 2"></a>
             <h3>Dangal
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.3
             </h3>
         </div>
 
         <div class="movie-card-holder">
-            <a href="../bollywood/pk.html"> <img src="https://i.pinimg.com/736x/e4/04/d1/e404d1acd0a1715808d9f98a63650226.jpg"
-                    alt="Image 3"></a>
+            <a href="../bollywood/pk.html"> <img
+                    src="https://i.pinimg.com/736x/e4/04/d1/e404d1acd0a1715808d9f98a63650226.jpg" alt="Image 3"></a>
             <h3>PK
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -210,8 +219,8 @@
         </div>
 
         <div class="movie-card-holder">
-            <a href="../bollywood/dhurandhar.html"> <img src="https://i.pinimg.com/736x/7e/d7/19/7ed719c4afc3037518a687d37e9835fa.jpg"
-                    alt="Image 1"></a>
+            <a href="../bollywood//dhurandhar.html"> <img
+                    src="https://i.pinimg.com/736x/7e/d7/19/7ed719c4afc3037518a687d37e9835fa.jpg" alt="Image 1"></a>
             <h3>Dhurandhar &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.6</h3>
 
         </div>
@@ -219,13 +228,13 @@
 
 
         <div class="movie-card-holder">
-            <a href="../bollywood/chennai_express.html"> <img src="https://i.pinimg.com/736x/09/d9/ac/09d9ac7d0b66e37b7e8a79e602ffc77e.jpg"
-                    alt="Image 5"></a>
+            <a href="../bollywood/chennai_express.html"> <img
+                    src="https://i.pinimg.com/736x/09/d9/ac/09d9ac7d0b66e37b7e8a79e602ffc77e.jpg" alt="Image 5"></a>
             <h3>Chennai Express
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ★6.2
             </h3>
         </div>
-    </div>  
+    </div>
 
 
 
