--- a/CINESTOP/html/movies/bollywood/dangal.html
+++ b/CINESTOP/html/movies/bollywood/dangal.html
@@ -105,42 +105,51 @@
     <br><br><br>
 
     <div>
-        <h1 class="contact-heading">WAR (2019)</h1>
+        <h1 class="contact-heading">DANGAL (2016)</h1>
     </div>
 
 
     <div class="movie-main">
         <div class="movie-left">
             <h2 class="contact-left-heading">About The <span> Movie </span></h2>
-            <p class="contact-left-para" style="color: lightgray;">War is a 2019 Indian Hindi-language action thriller
-                film directed by Siddharth Anand and produced by Aditya Chopra under Yash Raj Films. The third
-                installment in the YRF Spy Universe, it stars Hrithik Roshan and Tiger Shroff in the lead roles, with
-                Vaani Kapoor and Ashutosh Rana. In the film, an Indian RAW agent is assigned to eliminate his former
-                mentor who has gone rogue. <br>
+            <p class="contact-left-para" style="color: lightgray;">
+                Dangal (transl. 'wrestling bout') is a 2016 Indian Hindi-language biographical sports drama film
+                directed by Nitesh Tiwari and produced by Aamir Khan and Kiran Rao under Aamir Khan Productions with
+                Siddharth Roy Kapur under The Walt Disney Company India. The film stars Khan as Mahavir Singh Phogat, a
+                pehlwani amateur wrestler who trains his daughters Geeta Phogat and Babita Kumari to become India's
+                first world-class female wrestlers.[9] Fatima Sana Shaikh and Sanya Malhotra portray the adult versions
+                of the two Phogat sisters, Zaira Wasim and Suhani Bhatnagar their younger versions, Sakshi Tanwar their
+                mother, and Aparshakti Khurana adult version of their cousin, Ritvik Sahore his younger version, all of
+                them except Shaikh, Tanwar and Sahore in their film debuts. <br>
 
-                Principal photography commenced in September 2018. Tentatively titled Fighters, the title of War was
-                announced on 15 July 2019. The film was made on an estimated budget of ₹150 crore (US$18 million) with a
-                further ₹20 crore (US$2.4 million) spent on print and advertising. Vishal–Shekhar composed the
-                soundtrack, with the background score composed by Sanchit Balhara and Ankit Balhara, replacing Anand's
-                frequent collaborators Salim–Sulaiman. <br>
+                Development on the film began in early 2013 when Tiwari began writing the script. Khan had interviewed
+                the Phogat sisters in 2014 on his talk show Satyamev Jayate, before Tiwari approached him with the
+                script months later, after which Khan became the lead actor and producer. Set primarily in the Indian
+                state of Haryana, principal photography commenced in September 2015 in the neighbouring Punjab.[10]
+                Satyajit Pande served as the cinematographer and Ballu Saluja as the editor. Pritam scored the film's
+                background music and soundtrack, lyrics for which were written by Amitabh Bhattacharya.[11][12] Kripa
+                Shankar Patel Bishnoi, a coach with the Indian women's wrestling team, trained Khan and the cast for the
+                wrestling sequences.[13] <br>
 
-                War was theatrically released on 2 October 2019, with dubbed versions of Telugu and Tamil, coinciding
-                with Gandhi Jayanti.[5] It received generally positive reviews from critics, with praise towards its
-                action sequences, visuals, direction, cinematography, story, soundtrack, and cast performances, but
-                criticism towards its screenplay.[6] It emerged as a commercial success grossing ₹4.75 billion (US$67.45
-                million), becoming the highest-grossing Indian film of 2019.[7] A sequel titled War 2 was released in
-                2025.</p>
+                Dangal was a commercial success, setting several records at the box office including highest-grossing
+                Hindi film, highest-grossing Indian film worldwide, the 46th highest-grossing non-English film (5th
+                highest at the time of release),[23][24] and the 19th highest-grossing sports film worldwide.[25]
+                Produced on a budget of ₹70 crore (US$8.3 million),[3] the film grossed ₹1,968−2,024 crore (US$340
+                million), worldwide by various different estimates, including $216.2 million in China,[28]
+                becoming one of the country's top 20 highest-grossing foreign films.[29] According to some estimates, it
+                remains the only Indian film to cross the ₹2000 crore mark, to this day.[30] The film has also been
+                watched more than 400 million times on Chinese streaming platforms, as of November 2018.</p>
 
             <h2 class="contact-left-heading"> Movie <span> Awards </span></h2>
             <ul style="list-style-type: square;">
-                <li style="color: lightgray;">Filmfare Award for Best Action 2020</li>
-                <li style="color: lightgray;">IIFA Award for Best Choreography 2021</li>
+                <li style="color: lightgray;">Filmfare Awards</li>
                 <li style="color: lightgray;">Mirchi Music Awards</li>
-                <li style="color: lightgray;">Zee Cine Awards </li>
-                <li style="color: lightgray;">Screen Awards </li>
+                <li style="color: lightgray;">News 18 Movie Awards</li>
+                <li style="color: lightgray;">Zee Cine Awards</li>
+                <li style="color: lightgray;">Indian Film Festival of Melbourne </li>
             </ul>
             <br>
-           
+
 
 
         </div>
@@ -151,23 +160,23 @@
                 <button id="submit"> <a href="" style="text-decoration: none; color: white;">▶ WATCH NOW </a></button>
                 <div style="margin-left: -20px; margin-top: 27px;">
                     <ul style="list-style-type: none;">
-                        <li> <span style="font-weight: bold;">Genre:</span> Action</li>
-                        <li> <span style="font-weight: bold;"> Release Date: </span> 2 Oct 2019</li>
-                        <li> <span style="font-weight: bold;">Directed By: </span> Yash Raj Films</li>
+                        <li> <span style="font-weight: bold;">Genre:</span> Sport</li>
+                        <li> <span style="font-weight: bold;"> Release Date: </span> 23 Dec 2016</li>
+                        <li> <span style="font-weight: bold;">Directed By: </span> Nitesh Tiwari</li>
                         <li> <span style="font-weight: bold;">Ratings: </span></li>
                         <ul style="list-style-type: square;">
-                            <li >IMDb Rating:  6.6/10
+                            <li>IMDb Rating: 8.3/10
                             </li>
-                            <li >Rotten Tomatoes:  67%
+                            <li>Rotten Tomatoes: 88%
                             </li>
                         </ul>
                         <li> <span style="font-weight: bold;">Cast: </span></li>
                         <ul style="list-style-type: square;">
-                            <li> Hrithik Roshan as Kabir</li>
-                            <li>Tiger Shroff as Khalid</li>
-                            <li>Vaani Kapoor as Naina</li>
-                            <li>Ashutosh Ranaas as Colonel Luthra </li>
-                            <li>Anupriya Goenka as Aditi </li>
+                            <li>Aamir Khan as Mahavir Singh</li>
+                            <li>Sakshi Tanwar as Daya Shobha</li>
+                            <li>Fatima Shaikh as Geeta Phogat</li>
+                            <li>Sanya Malhotra as Babita Kumari  </li>
+                            <li>Aparshakti Khurana as Omkar Singh</li>
                         </ul>
 
                     </ul>
@@ -179,12 +188,13 @@
     </div>
 
     <div>
-        <h1 style=" padding: 13px; margin-left: 20px; margin-top: -20px;" class="contact-left-heading"> MORE <span> BOLLYWOOD </span></h1>
+        <h1 style=" padding: 13px; margin-left: 20px; margin-top: -20px;" class="contact-left-heading"> MORE <span>
+                BOLLYWOOD </span></h1>
     </div>
 
     <div style="display: inline; margin-left: 5.5vw; margin-top: 8px;">
         <div class="movie-card-holder">
-            <a href="#"><img
+            <a href="../bollywood/war.html"><img
                     src="https://i.pinimg.com/736x/7e/4a/69/7e4a690244c526b6b922a613e1859a14.jpg" alt="Image 4"></a>
             <h3>WAR
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -192,7 +202,7 @@
         </div>
 
         <div class="movie-card-holder">
-            <a href="../bollywood/dangal.html"> <img src="https://i.pinimg.com/736x/7b/fc/85/7bfc85e7a11d62a90aa58cd395529622.jpg"
+            <a href="#"> <img src="https://i.pinimg.com/736x/7b/fc/85/7bfc85e7a11d62a90aa58cd395529622.jpg"
                     alt="Image 2"></a>
             <h3>Dangal
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.3
@@ -210,7 +220,7 @@
         </div>
 
         <div class="movie-card-holder">
-            <a href="../bollywood/dhurandhar.html"> <img src="https://i.pinimg.com/736x/7e/d7/19/7ed719c4afc3037518a687d37e9835fa.jpg"
+            <a href="../bollywood//dhurandhar.html"> <img src="https://i.pinimg.com/736x/7e/d7/19/7ed719c4afc3037518a687d37e9835fa.jpg"
                     alt="Image 1"></a>
             <h3>Dhurandhar &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.6</h3>
 
@@ -225,7 +235,7 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ★6.2
             </h3>
         </div>
-    </div>  
+    </div>
 
 
 
