--- a/CINESTOP/html/movies/bollywood/pk.html
+++ b/CINESTOP/html/movies/bollywood/pk.html
@@ -105,42 +105,52 @@
     <br><br><br>
 
     <div>
-        <h1 class="contact-heading">WAR (2019)</h1>
+        <h1 class="contact-heading">PK (2014)</h1>
     </div>
 
 
     <div class="movie-main">
         <div class="movie-left">
             <h2 class="contact-left-heading">About The <span> Movie </span></h2>
-            <p class="contact-left-para" style="color: lightgray;">War is a 2019 Indian Hindi-language action thriller
-                film directed by Siddharth Anand and produced by Aditya Chopra under Yash Raj Films. The third
-                installment in the YRF Spy Universe, it stars Hrithik Roshan and Tiger Shroff in the lead roles, with
-                Vaani Kapoor and Ashutosh Rana. In the film, an Indian RAW agent is assigned to eliminate his former
-                mentor who has gone rogue. <br>
+            <p class="contact-left-para" style="color: lightgray;">
+                PK is a 2014 Indian Hindi-language satirical science fiction comedy-drama film
+                edited and directed by Rajkumar Hirani and written by Hirani and Abhijat Joshi and jointly produced by
+                Hirani and Vidhu Vinod Chopra under the production banners of Rajkumar Hirani Films and Vinod Chopra
+                Films, respectively. A religious satire addressing superstition and pseudoprophets, the film stars an
+                ensemble cast of Aamir Khan (as the title character), Anushka Sharma, Sushant Singh Rajput, Boman Irani,
+                Saurabh Shukla and Sanjay Dutt. <br>
 
-                Principal photography commenced in September 2018. Tentatively titled Fighters, the title of War was
-                announced on 15 July 2019. The film was made on an estimated budget of ₹150 crore (US$18 million) with a
-                further ₹20 crore (US$2.4 million) spent on print and advertising. Vishal–Shekhar composed the
-                soundtrack, with the background score composed by Sanchit Balhara and Ankit Balhara, replacing Anand's
-                frequent collaborators Salim–Sulaiman. <br>
+                After the success of 3 Idiots (2009), Hirani and Joshi began scripting their next project; finding
+                similarities with the plot of Inception (2010), they scrapped the film. It was later rewritten with a
+                different angle and tone. During production, the film was initially titled Talli and later Ek Tha Talli
+                before being changed to PK as the latter title was found to be too similar to Ek Tha Tiger (2012). The
+                film's soundtrack was composed by Shantanu Moitra, Ajay–Atul and Ankit Tiwari with lyrics written by
+                Swanand Kirkire, Amitabh Varma and Manoj Muntashir. UTV Motion Pictures acquired the distribution rights
+                of the film. PK was the first Bollywood film to be shot in Belgium.[citation needed] <br>
 
-                War was theatrically released on 2 October 2019, with dubbed versions of Telugu and Tamil, coinciding
-                with Gandhi Jayanti.[5] It received generally positive reviews from critics, with praise towards its
-                action sequences, visuals, direction, cinematography, story, soundtrack, and cast performances, but
-                criticism towards its screenplay.[6] It emerged as a commercial success grossing ₹4.75 billion (US$67.45
-                million), becoming the highest-grossing Indian film of 2019.[7] A sequel titled War 2 was released in
-                2025.</p>
+                PK was released on 19 December 2014. Upon release, it received critical acclaim, with praise directed
+                towards Khan's performance and the film's humour. The film received 8 nominations at the 60th Filmfare
+                Awards, including Best Actor for Khan, Best Film, and Best Director for Hirani, winning two.
+                Additionally, it won five Producers Guild Film Awards, and two Screen Awards. PK garnered the Telstra
+                People's Choice Award at the Indian Film Festival of Melbourne. Produced on a budget of ₹1.22 billion,
+                PK was the first Indian film to gross more than ₹7 billion and US$100 million worldwide. At the time of
+                its release, it emerged as the highest-grossing Indian film of all time. PK has remained among the top
+                50 highest-grossing Indian films for over a decade, from its release in 2014 to 2024. With a worldwide
+                gross of ₹750.60–769.89 crore, it continues to be one of the most successful films in Indian cinema,
+                reflecting its lasting popularity and cultural significance. The film's final worldwide gross was
+                ₹769.89 crore (US$118.92 million).[4] It currently stands as the ninth highest-grossing Hindi film of
+                all-time.</p>
 
             <h2 class="contact-left-heading"> Movie <span> Awards </span></h2>
             <ul style="list-style-type: square;">
-                <li style="color: lightgray;">Filmfare Award for Best Action 2020</li>
-                <li style="color: lightgray;">IIFA Award for Best Choreography 2021</li>
-                <li style="color: lightgray;">Mirchi Music Awards</li>
-                <li style="color: lightgray;">Zee Cine Awards </li>
+                <li style="color: lightgray;">Apsara Film Producers Guild Awards</li>
+                <li style="color: lightgray;">IIF Academy Awards</li>
+                <li style="color: lightgray;">ETC Bollywood Business Awards</li>
+                <li style="color: lightgray;">Filmfare Awards</li>
                 <li style="color: lightgray;">Screen Awards </li>
             </ul>
             <br>
-           
+
 
 
         </div>
@@ -151,23 +161,23 @@
                 <button id="submit"> <a href="" style="text-decoration: none; color: white;">▶ WATCH NOW </a></button>
                 <div style="margin-left: -20px; margin-top: 27px;">
                     <ul style="list-style-type: none;">
-                        <li> <span style="font-weight: bold;">Genre:</span> Action</li>
-                        <li> <span style="font-weight: bold;"> Release Date: </span> 2 Oct 2019</li>
-                        <li> <span style="font-weight: bold;">Directed By: </span> Yash Raj Films</li>
+                        <li> <span style="font-weight: bold;">Genre:</span> Comedy</li>
+                        <li> <span style="font-weight: bold;"> Release Date: </span> 19 Dec 2014</li>
+                        <li> <span style="font-weight: bold;">Directed By: </span> Rajkumar Hirani</li>
                         <li> <span style="font-weight: bold;">Ratings: </span></li>
                         <ul style="list-style-type: square;">
-                            <li >IMDb Rating:  6.6/10
+                            <li>IMDb Rating: 8.1/10
                             </li>
-                            <li >Rotten Tomatoes:  67%
+                            <li>Rotten Tomatoes: 78%
                             </li>
                         </ul>
                         <li> <span style="font-weight: bold;">Cast: </span></li>
                         <ul style="list-style-type: square;">
-                            <li> Hrithik Roshan as Kabir</li>
-                            <li>Tiger Shroff as Khalid</li>
-                            <li>Vaani Kapoor as Naina</li>
-                            <li>Ashutosh Ranaas as Colonel Luthra </li>
-                            <li>Anupriya Goenka as Aditi </li>
+                            <li>Aamir Khan as PK</li>
+                            <li>Anushka Sharma as Jagat Janini</li>
+                            <li>Sushant Singh as Sarfaraz Yousuf</li>
+                            <li>Saurabh Shukla as Tapasvi Maharaj</li>
+                            <li>Sanjay Dutt as Bhairon Bhaia Singh </li>
                         </ul>
 
                     </ul>
@@ -179,12 +189,13 @@
     </div>
 
     <div>
-        <h1 style=" padding: 13px; margin-left: 20px; margin-top: -20px;" class="contact-left-heading"> MORE <span> BOLLYWOOD </span></h1>
+        <h1 style=" padding: 13px; margin-left: 20px; margin-top: -20px;" class="contact-left-heading"> MORE <span>
+                BOLLYWOOD </span></h1>
     </div>
 
     <div style="display: inline; margin-left: 5.5vw; margin-top: 8px;">
         <div class="movie-card-holder">
-            <a href="#"><img
+            <a href="../bollywood/war.html"><img
                     src="https://i.pinimg.com/736x/7e/4a/69/7e4a690244c526b6b922a613e1859a14.jpg" alt="Image 4"></a>
             <h3>WAR
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -192,16 +203,16 @@
         </div>
 
         <div class="movie-card-holder">
-            <a href="../bollywood/dangal.html"> <img src="https://i.pinimg.com/736x/7b/fc/85/7bfc85e7a11d62a90aa58cd395529622.jpg"
-                    alt="Image 2"></a>
+            <a href="../bollywood/dangal.html"> <img
+                    src="https://i.pinimg.com/736x/7b/fc/85/7bfc85e7a11d62a90aa58cd395529622.jpg" alt="Image 2"></a>
             <h3>Dangal
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.3
             </h3>
         </div>
 
         <div class="movie-card-holder">
-            <a href="../bollywood/pk.html"> <img src="https://i.pinimg.com/736x/e4/04/d1/e404d1acd0a1715808d9f98a63650226.jpg"
-                    alt="Image 3"></a>
+            <a href="../bollywood/pk.html"> <img
+                    src="https://i.pinimg.com/736x/e4/04/d1/e404d1acd0a1715808d9f98a63650226.jpg" alt="Image 3"></a>
             <h3>PK
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -210,8 +221,8 @@
         </div>
 
         <div class="movie-card-holder">
-            <a href="../bollywood/dhurandhar.html"> <img src="https://i.pinimg.com/736x/7e/d7/19/7ed719c4afc3037518a687d37e9835fa.jpg"
-                    alt="Image 1"></a>
+            <a href="../bollywood//dhurandhar.html"> <img
+                    src="https://i.pinimg.com/736x/7e/d7/19/7ed719c4afc3037518a687d37e9835fa.jpg" alt="Image 1"></a>
             <h3>Dhurandhar &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.6</h3>
 
         </div>
@@ -219,13 +230,13 @@
 
 
         <div class="movie-card-holder">
-            <a href="../bollywood/chennai_express.html"> <img src="https://i.pinimg.com/736x/09/d9/ac/09d9ac7d0b66e37b7e8a79e602ffc77e.jpg"
-                    alt="Image 5"></a>
+            <a href="../bollywood/chennai_express.html"> <img
+                    src="https://i.pinimg.com/736x/09/d9/ac/09d9ac7d0b66e37b7e8a79e602ffc77e.jpg" alt="Image 5"></a>
             <h3>Chennai Express
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ★6.2
             </h3>
         </div>
-    </div>  
+    </div>
 
 
 
