--- a/CINESTOP/html/movies/lollywood/parwaz_hai_junoon.html
+++ b/CINESTOP/html/movies/lollywood/parwaz_hai_junoon.html
@@ -105,42 +105,36 @@
     <br><br><br>
 
     <div>
-        <h1 class="contact-heading">WAR (2019)</h1>
+        <h1 class="contact-heading">PARWAZ HAI JUNOON (2018)</h1>
     </div>
 
 
     <div class="movie-main">
         <div class="movie-left">
             <h2 class="contact-left-heading">About The <span> Movie </span></h2>
-            <p class="contact-left-para" style="color: lightgray;">War is a 2019 Indian Hindi-language action thriller
-                film directed by Siddharth Anand and produced by Aditya Chopra under Yash Raj Films. The third
-                installment in the YRF Spy Universe, it stars Hrithik Roshan and Tiger Shroff in the lead roles, with
-                Vaani Kapoor and Ashutosh Rana. In the film, an Indian RAW agent is assigned to eliminate his former
-                mentor who has gone rogue. <br>
+            <p class="contact-left-para" style="color: lightgray;">
+                Parwaaz Hai Junoon (Urdu: پرواز ہے جنون; lit: Soaring is Passion) is a 2018 Pakistani aerial combat-war
+                romantic film, directed by Haseeb Hassan (in his directorial debut), produced by Momina Duraid and
+                written by Farhat Ishtiaq. The film features an ensemble cast of Hamza Ali Abbasi, Ahad Raza Mir, Hania
+                Amir, Kubra Khan, Alamdar Khan, Marina Khan, Shamoon Abbasi, Adnan Jaffar, Shaz Khan, Shafaat Ali, and
+                Mustafa Changazi in pivotal roles. Earlier, Osman Khalid Butt was also a part of the film but had to
+                withdraw as the film's shoot schedule clashed with his promotions for Balu Mahi.[7][8] The film is a
+                tribute to Pakistan Air Force. <br>
 
-                Principal photography commenced in September 2018. Tentatively titled Fighters, the title of War was
-                announced on 15 July 2019. The film was made on an estimated budget of ₹150 crore (US$18 million) with a
-                further ₹20 crore (US$2.4 million) spent on print and advertising. Vishal–Shekhar composed the
-                soundtrack, with the background score composed by Sanchit Balhara and Ankit Balhara, replacing Anand's
-                frequent collaborators Salim–Sulaiman. <br>
-
-                War was theatrically released on 2 October 2019, with dubbed versions of Telugu and Tamil, coinciding
-                with Gandhi Jayanti.[5] It received generally positive reviews from critics, with praise towards its
-                action sequences, visuals, direction, cinematography, story, soundtrack, and cast performances, but
-                criticism towards its screenplay.[6] It emerged as a commercial success grossing ₹4.75 billion (US$67.45
-                million), becoming the highest-grossing Indian film of 2019.[7] A sequel titled War 2 was released in
-                2025.</p>
+                It was released on Eid al-Adha, 24 August 2018, under Momina & Duraid Films and was distributed by Hum
+                Films.[2][10] It is the seventh-highest-grossing Pakistani film of all time.
+            </p>
 
             <h2 class="contact-left-heading"> Movie <span> Awards </span></h2>
             <ul style="list-style-type: square;">
-                <li style="color: lightgray;">Filmfare Award for Best Action 2020</li>
-                <li style="color: lightgray;">IIFA Award for Best Choreography 2021</li>
-                <li style="color: lightgray;">Mirchi Music Awards</li>
-                <li style="color: lightgray;">Zee Cine Awards </li>
-                <li style="color: lightgray;">Screen Awards </li>
+                <li style="color: lightgray;">Lux Style Award for Best Film (Nomination)</li>
+                <li style="color: lightgray;">Galaxy Lollywood Award for Best Supporting Actor (Hania Aamir)</li>
+                <li style="color: lightgray;">IPPA Award (International Pakistan Prestige Awards) for Best Film</li>
+                <li style="color: lightgray;">Galaxy Lollywood Award for Best Action</li>
+                <li style="color: lightgray;">IPPA Award for Best Director</li>
             </ul>
             <br>
-           
+
 
 
         </div>
@@ -152,22 +146,22 @@
                 <div style="margin-left: -20px; margin-top: 27px;">
                     <ul style="list-style-type: none;">
                         <li> <span style="font-weight: bold;">Genre:</span> Action</li>
-                        <li> <span style="font-weight: bold;"> Release Date: </span> 2 Oct 2019</li>
-                        <li> <span style="font-weight: bold;">Directed By: </span> Yash Raj Films</li>
+                        <li> <span style="font-weight: bold;"> Release Date: </span> 22 August 2018</li>
+                        <li> <span style="font-weight: bold;">Directed By: </span> Haseeb Hassan</li>
                         <li> <span style="font-weight: bold;">Ratings: </span></li>
                         <ul style="list-style-type: square;">
-                            <li >IMDb Rating:  6.6/10
+                            <li>IMDb Rating: 7.5/10
                             </li>
-                            <li >Rotten Tomatoes:  67%
+                            <li>Rotten Tomatoes: 83%
                             </li>
                         </ul>
                         <li> <span style="font-weight: bold;">Cast: </span></li>
                         <ul style="list-style-type: square;">
-                            <li> Hrithik Roshan as Kabir</li>
-                            <li>Tiger Shroff as Khalid</li>
-                            <li>Vaani Kapoor as Naina</li>
-                            <li>Ashutosh Ranaas as Colonel Luthra </li>
-                            <li>Anupriya Goenka as Aditi </li>
+                            <li>Hamza Ali Abbasi as SQ Hamza Ali </li>
+                            <li>Hania Amir as Officer Sania Taimoor</li>
+                            <li>Ahad Raza Mir as Officer Saad Khan</li>
+                            <li>Shaz Khan as Sq/Ldr Nadir Kirmani </li>
+                            <li>Kubra Khan as Fizza Nadir Kirmani</li>
                         </ul>
 
                     </ul>
@@ -179,53 +173,54 @@
     </div>
 
     <div>
-        <h1 style=" padding: 13px; margin-left: 20px; margin-top: -20px;" class="contact-left-heading"> MORE <span> BOLLYWOOD </span></h1>
+        <h1 style=" padding: 13px; margin-left: 20px; margin-top: -20px;" class="contact-left-heading"> MORE <span>
+                LOLLYWOOD </span></h1>
     </div>
 
     <div style="display: inline; margin-left: 5.5vw; margin-top: 8px;">
         <div class="movie-card-holder">
-            <a href="#"><img
-                    src="https://i.pinimg.com/736x/7e/4a/69/7e4a690244c526b6b922a613e1859a14.jpg" alt="Image 4"></a>
-            <h3>WAR
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★6.6</h3>
-        </div>
-
-        <div class="movie-card-holder">
-            <a href="../bollywood/dangal.html"> <img src="https://i.pinimg.com/736x/7b/fc/85/7bfc85e7a11d62a90aa58cd395529622.jpg"
-                    alt="Image 2"></a>
-            <h3>Dangal
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.3
-            </h3>
-        </div>
-
-        <div class="movie-card-holder">
-            <a href="../bollywood/pk.html"> <img src="https://i.pinimg.com/736x/e4/04/d1/e404d1acd0a1715808d9f98a63650226.jpg"
-                    alt="Image 3"></a>
-            <h3>PK
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;★8.1</h3>
-
-        </div>
-
-        <div class="movie-card-holder">
-            <a href="../bollywood/dhurandhar.html"> <img src="https://i.pinimg.com/736x/7e/d7/19/7ed719c4afc3037518a687d37e9835fa.jpg"
+            <a href="../lollywood/khuda_kay_liye.html"> <img
+                    src="https://lh6.googleusercontent.com/proxy/YmEB2T67y4tnQAf9s-C-kKAyibkjDeCCiKNslprkTPWmTZN4zsXbbc6PHggi3pFvH_GtKwctLFEJ6-Y0Iq97x3onxhCTeGqvIG1lzsvvQkzobo6xha342Bhdd705"
                     alt="Image 1"></a>
-            <h3>Dhurandhar &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.6</h3>
+            <h3>Khuda kay Liye &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.3</h3>
 
         </div>
-
-
 
         <div class="movie-card-holder">
-            <a href="../bollywood/chennai_express.html"> <img src="https://i.pinimg.com/736x/09/d9/ac/09d9ac7d0b66e37b7e8a79e602ffc77e.jpg"
-                    alt="Image 5"></a>
-            <h3>Chennai Express
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ★6.2
+            <a href="../lollywood/bol.html"> <img
+                    src="https://m.media-amazon.com/images/M/MV5BMGM2ZTc2OTgtYjI5MS00ZDE5LThjNjYtZmExMzZmZjQwNmVjXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"
+                    alt="Image 2"></a>
+            <h3>Bol
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.1
             </h3>
         </div>
-    </div>  
+
+        <div class="movie-card-holder">
+            <a href="../lollywood/maula_jutt.html"> <img
+                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRa0OTQZIAvgJ1JfK8aRYKPnD1fqZe38TNzRg&s"
+                    alt="Image 3"></a>
+            <h3>Maula Jutt
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★7.8
+            </h3>
+
+        </div>
+
+        <div class="movie-card-holder">
+            <a href="../lollywood/teefa_in_trouble.html"><img
+                    src="https://m.media-amazon.com/images/M/MV5BNjg5ZmY0NmItNGQxMS00ODE0LTgzNGItNjMyNTc2OTc4OWIzXkEyXkFqcGc@._V1_.jpg"
+                    alt="Image 4"></a>
+            <h3>Teefa in Trouble &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★7.1
+            </h3>
+        </div>
+
+        <div class="movie-card-holder">
+            <a href="../lollywood/parwaz_hai_junoon.html"> <img
+                    src="https://pakmdb.com/films2018/parwaz_hai_junoon_03.jpg" alt="Image 5"></a>
+            <h3>Parwaz Hai Junoon
+                &nbsp;★7.5
+            </h3>
+        </div>
+    </div>
 
 
 
